--- a/Project/public_html/LoadingIcons.css
+++ b/Project/public_html/LoadingIcons.css
@@ -2,97 +2,172 @@
     Support the loading icon's look 
 */
 p {
-  color: white;
-  font: 300 4em/150% Impact;
-  position: absolute;
-  z-index: 1;
-  }
+    color: white;
+    font: 300 4em/150% Impact;
+    position: absolute;
+    z-index: 1;
+}
 
 .LoadingDotsAnimation {
-  font-size: 40px;
+    font-size: 40px;
 }
 
 .LoadingDotsAnimation span {
-  font-size: 50px;
-  animation-name: blink;
-  animation-duration: 1.4s;
-  animation-iteration-count: infinite;
-  animation-fill-mode: both;
+    font-size: 50px;
+    animation-name: blink;
+    animation-duration: 1.4s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
 }
 
 .LoadingDotsAnimation span:nth-child(2) {
-  animation-delay: .2s;
+    animation-delay: .2s;
 }
 
 .LoadingDotsAnimation span:nth-child(3) {
-  animation-delay: .4s;
+    animation-delay: .4s;
 }
 
 @keyframes blink {
-  0% {
-    opacity: .2;
-  }
-  20% {
-    opacity: 1;
-  }
-  100% {
-    opacity: .2;
-  }
-}
-        .LoadingSpinnerAnimation {
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
-  position: absolute;
-  z-index: 1;
+    0% {
+        opacity: .2;
+    }
+    20% {
+        opacity: 1;
+    }
+    100% {
+        opacity: .2;
+    }
 }
 
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); } }
-  
-  #LoadingScreenProgress {
-    width: 100%;
+.LoadingSpinnerAnimation {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    position: absolute;
+    z-index: 1;
+}
+#loading{
+    width: 200px;
+    height: 60px;
+    /*margin: 0 auto;*/
+    /*margin-top: 100px;*/
+    position: relative;
+    top: calc(50% - 80px);
+    left: calc(50% - 70px);
+}
+.loading span{
+    width: 50px;
     height: 30px;
-    top:calc(50% + 120px);
+    border-radius: 50%;
+    background: lightgreen;
+    position: absolute;
+    /*margin-top: -15px;*/
+    overflow: hidden;
+    -webkit-animation: changePosition 2.08s linear infinite;
+    top: calc(50% + 50px);
+    left: calc(50% - 70px);
+}
+@-webkit-keyframes changePosition{
+    0%,100%{
+        -webkit-transform: translate(70px);
+    }
+    20%{
+        width: 50px;
+        height: 30px;
+        margin-top:-15px;
+        -webkit-transform: translate(0px);
+    }
+    30%{
+        width: 20px;
+        height: 60px;
+        margin-top:-30px;
+        -webkit-transform: translate(0px);
+    }
+    35%{
+        width: 50px;
+        height: 30px;
+        margin-top:-15px;
+        -webkit-transform: translate(5px);
+        background: lightblue;
+    }
+    70%{
+        width: 50px;
+        height: 30px;
+        margin-top:-15px;
+        -webkit-transform: translate(160px);
+    }
+    80%{
+        width: 20px;
+        height: 60px;
+        margin-top:-30px;
+        -webkit-transform: translate(160px);
+    }
+    85%{
+        width: 50px;
+        height: 30px;
+        margin-top:-15px;
+        -webkit-transform: translate(155px);
+        background: lightgreen;
+    }
+
+}
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+#LoadingScreenProgress {
+    width: 70%;
+    height: 30px;
+    top: calc(50% + 120px);
     background-color: grey;
     position: absolute;
     z-index: 2;
-  }
-    #LoadingScreenBar {
-        width: 0%;
-        height: 30px;
-        background-color: green;
-        position: absolute;
-        font-size: 30px;
-        z-index: 3;
-    }
-    
-    #LoadingSpinner {
-        top:calc(50% - 80px);
-        left:calc(50% - 70px);
-    }
-    
-    #LoadingDots {
-        top:calc(50% + 20px);
-        left:calc(50% - 65px);
-    }
-    
-    #GLCanvas{
-        position: absolute;
-        z-index: 0;
-    }
-    
-    #LoadingIconParent{
-        position: relative;
-        top: 0px;
-        left: 0px;
-    }
-    
-    table, th, td {
+    margin-left: 15%;
+    border-radius: 20px;
+
+}
+
+#LoadingScreenBar {
+    width: 0%;
+    height: 30px;
+    background-color: #009fe8;
+    position: absolute;
+    font-size: 25px;
+    text-align: right;
+    z-index: 3;
+    border-radius: 20px;
+}
+
+#LoadingSpinner {
+    top: calc(50% - 80px);
+    left: calc(50% - 70px);
+}
+
+#LoadingDots {
+    top: calc(50% + 20px);
+    left: calc(50% - 65px);
+}
+
+#GLCanvas {
+    position: absolute;
+    z-index: 0;
+}
+
+#LoadingIconParent {
+    position: relative;
+    top: 0px;
+    left: 0px;
+}
+
+table, th, td {
     border: 1px solid black;
-    }
+}
